k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-manager
  labels:
    app.kubernetes.io/name: task-manager-api
    app.kubernetes.io/part-of: task-manager
